<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/language"
        android:title="@string/language"
        android:icon="@drawable/baseline_language_24"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/english"
                android:title="@string/english"
                ></item>
            <item
                android:id="@+id/arabic"
                android:title="@string/arabic"
                ></item>
        </menu>
    </item>

    <item
        android:id="@+id/theme"
        android:title="@string/theme"
        app:showAsAction="always"
        android:icon="@drawable/theme_img">
        <menu>
            <item
                android:id="@+id/light"
                android:title="@string/light"
                android:icon="@drawable/baseline_light_mode_24"
                ></item>
            <item
                android:id="@+id/dark"
                android:title="@string/dark"
                android:icon="@drawable/baseline_nightlight_24"
                ></item>
        </menu>
    </item>
    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        app:showAsAction="never"
        android:icon="@drawable/baseline_logout_24"
        ></item>

    <item
        android:id="@+id/rate_us"
        android:title="@string/rate_us"
        app:showAsAction="never"
        android:icon="@drawable/star"
        ></item>


</menu>