<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.AddNewRecipe">

    <EditText
        android:id="@+id/add_recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/recipe_title"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_recipe_procedure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/recipe_procedure"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_recipe_title" />

    <EditText
        android:id="@+id/add_recipe_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/recipe_time"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_recipe_procedure" />


    <LinearLayout
        android:id="@+id/spinner_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_recipe_time">

        <TextView
            android:id="@+id/textView5"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/choose_category_to_add_in_it"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/categories_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="0dp"
            android:contextClickable="true" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="191dp"
        android:layout_height="142dp"
        android:layout_marginHorizontal="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@+id/saveCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_layout"></ImageView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/select_img"
        style="@style/Text"
        android:layout_width="150dp"
        android:layout_height="71dp"
        android:layout_marginStart="22dp"

        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/baby_blue"
        android:text="@string/select_image"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/saveCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_preview"
        app:layout_constraintTop_toTopOf="@+id/image_preview"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveCategory"
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="36dp"
        android:background="@color/lightGray"
        android:padding="10dp"
        android:text="Save"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>