<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:elevation="8dp"
    android:layout_marginHorizontal="30dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/add_new_ingredient"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal"
            android:background="@color/darkGreen"
            android:padding="8dp"
            />

        <EditText
            android:id="@+id/ingredient_name"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView5"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/lightGray"
            android:ems="10"
            android:hint="@string/write_ingredient_name"
            android:inputType="textPersonName"
            android:padding="20dp" />

        <EditText
            android:id="@+id/ingredient_amount"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ingredient_name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="23dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/lightGray"
            android:ems="10"
            android:hint="@string/write_ingredient_amount"
            android:inputType="textPersonName"
            android:padding="20dp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>