<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/background"
    tools:context=".ui.activities.HomePage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/hello"
        style="@style/Text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        android:text="@string/what_are_you_cooking_today"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_icon" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_search"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="95dp"
        android:layout_marginHorizontal="20dp"
        app:cardElevation="12dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:queryBackground="@color/white"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_recipe" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/filter"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
           android:contextClickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toEndOf="@id/card_search"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipe1_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
android:background="@drawable/img_3"
android:id="@+id/bottom_navbar"
android:layout_height="60dp"
android:layout_width="match_parent"
app:itemIconSize="28dp"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toStartOf="parent"
app:menu="@menu/menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="38dp"
        android:clickable="true"
        android:src="@drawable/baseline_add_24"
></com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.constraintlayout.widget.ConstraintLayout>